# Human_Obstacle_Detection

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  readme.md
app/: CMakeLists.txt  Classifier.cpp  HumanDetection.cpp  ImageProcessingHelper.cpp  ImageReaderHelper.cpp  Testing.cpp  Training.cpp  main.cpp
include/: Classifier.h  HumanDetection.h  ImageProcessingHelper.h  ImageProcessingHelper.hpp  ImageReaderHelper.h  ImageReaderHelper.hpp  MockImageReaderHelper.h  Testing.h  Training.h
results/: cppcheck.txt  cpplint.txt
test/: CMakeLists.txt  MockImageReaderHelper.cpp  main.cpp  testImageProcessingHelper.cpp  testImageReaderHelper.cpp  testTestingClass.cpp  testTrainingClass.cpp
